--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,5 @@
 <div class="d-flex flex-column align-items-center justify-content-center">
   <h1 class="mt-4">Welcome to Scheduled Tweets</h1>
-
 </div>
+
+<%= button_to "Connect Twitter", "/auth/twitter", method: :post, class: "btn btn-primary" %>
